force-app/main/default/objects/sf_devops__Work_Item_State_Change__e/sf_devops__Work_Item_State_Change__e.object-meta.xml
<CustomObject>
    <description>Platform Event for a state change of a Work Item</description>
    <label>Work Item State Change</label>
    <pluralLabel>Work Item State Changes</pluralLabel>
</CustomObject>