force-app/main/default/objects/sf_devops__Work_Item_State_Change__e/fields/sf_devops__New_State__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__New_State__c</fullName>
    <description>The new state of a Work Item</description>
    <label>New State</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>