force-app/main/default/objects/sf_devops__Work_Item_State_Change__e/fields/sf_devops__Previous_State__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Previous_State__c</fullName>
    <description>The previous state of a Work Item</description>
    <label>Previous State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>