force-app/main/default/objects/sf_devops__Work_Item_State_Change__e/fields/sf_devops__Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Work_Item_Id__c</fullName>
    <description>The Work Item that changed its state</description>
    <label>Work Item Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>